--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "node-rs"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
 repository = "https://github.com/AndrewGaspar/node-rs"
 homepage = "https://github.com/AndrewGaspar/node-rs"
@@ -12,8 +12,11 @@ categories = ["api-bindings", "web-programming"]
 description = "Rust bindings for node.js using stdweb"
 
 [dependencies]
-stdweb = "0.4.8"
-stdweb-derive = "0.4.0"
+stdweb-derive = "0.5.0"
+
+[dependencies.stdweb]
+version = "0.4.9"
+default-features = false
 
 [features]
 "docs-rs" = ["stdweb/docs-rs"]
